Add Identity scaffolding item

--- a/EasyOrder.Web/appsettings.json
+++ b/EasyOrder.Web/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-EasyOrder.Web-e91f24a8-1721-4d73-93af-abd448d79ac1;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-EasyOrder.Web-e91f24a8-1721-4d73-93af-abd448d79ac1;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=EasyOrder.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
